# qubit_zz_coupling

./: .gitignore  README.md  plotly_2d_histogram_correlated_normal.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: unit-tests.yml
examples/: ZZandTLS_V2_NF_071825.ipynb  drive_example.ipynb  drive_scan.ipynb  drive_scan_single.ipynb  example.ipynb  fa_ZZandTLS_V2_NF_071825.ipynb  notes.ipynb  org_ZZandTLS_V2_NF_071825.ipynb  rabi_scan.ipynb  rabi_scan_q1.ipynb  rabi_scan_q2.ipynb  ramsey_scan.ipynb  ramsey_scan_q1.ipynb  ramsey_scan_q2.ipynb  scan_coupling.ipynb  simulation-2qubit-time-dept.ipynb  simulation-qubit-time-dept.ipynb  single_qubit.ipynb  t1a_PLOTS_ZZandTLS_V2_NF_071825.ipynb  t1a_ZZandTLS_V2_NF_071825.ipynb
nb/: Refactor_Two_Qubits_with_ZZCoupling_and_single_TLS_via_ZZ_interaction.ipynb  Two_Qubits_with_ZZCoupling_and_single_TLS_via_ZZ_interaction.ipynb  Untitled-1.ipynb  dev.ipynb
qubit_zz_coupling/: README.md  core.py  models.py  pyproject.toml  sample.py  setup.py  utils.py
qubit_zz_coupling/src/: t1.py  utils.py
qubit_zz_coupling/tests/: test_t1.py
qubit_zz_model/: qubit_zz_model
tests/: test_core.py
